--- a/src/main/resources/templates/postings/index.html
+++ b/src/main/resources/templates/postings/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Forum Page</title>
@@ -7,10 +7,7 @@
 
 <body>
 
-    <header>
-        Header
-        <hr>
-    </header>
+    <header th:replace="header :: header"></header>
 
     <main>
         <form>
@@ -72,10 +69,7 @@
         </nav>
     </main>
 
-    <footer>
-        <hr>
-        Footer
-    </footer>
+    <footer th:replace="footer :: footer"></footer>
 
 </body>
 </html>
