--- a/src/main/resources/templates/postings/index.html
+++ b/src/main/resources/templates/postings/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Forum Page</title>
@@ -7,7 +7,7 @@
 
 <body>
 
-    <header th:replace="header :: header"></header>
+    <header id="header"></header>
 
     <main>
         <form>
@@ -69,7 +69,7 @@
         </nav>
     </main>
 
-    <footer th:replace="footer :: footer"></footer>
+    <footer id="footer"></footer>
 
 </body>
 </html>
