--- a/src/main/resources/templates/postings/detail.html
+++ b/src/main/resources/templates/postings/detail.html
@@ -2,33 +2,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Eunah Kim">
     <title>Posting Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
-
     <header id="header"></header>
 
-    <main>
-        <header>
+    <main class="container">
+        <header class="py-5 text-center">
             <h1>First Posting</h1>
         </header>
 
-        <aside>
-            <p>Eunah</p>
-            <p><a rel="me" href="rladmsdkz@gmail.com">rladmsdkz@gmail.com</a></p>
-            <p><time datetime="2023-03-30T00:00:00">2024-03-30</time></p>
-            <p>#java</p>
-        </aside>
+        <div class="row g-5">
+            <section class="col-md-5 col-lg-4 order-md-last">
+                <aside>
+                    <p><span class="nick-name">Eunah</span></p>
+                    <p><a class="u-url" rel="me" href="rladmsdkz@gmail.com">rladmsdkz@mail.com</a></p>
+                    <p><time datetime="2024-04-01T00:00:00">2024-01-01</time></p>
+                    <p>#java</p>
+                </aside>
+            </section>
 
-        <section>
-            <p>Content<br><br></p>
+            <article class="col-md-7 col-lg-8">
+                <p>Content<br><br></p>
+            </article>
+        </div>
 
-            <div>
-                <form>
-                    <label for="articleComment" hidden>Comment</label>
-                    <textarea id="articleComment" placeholder="Write Comment.." rows="3"></textarea>
-                    <button type="submit">Write</button>
+        <div class="row g-5">
+            <section>
+                <form class="row g-3">
+                    <div class="col-8">
+                        <label for="comment-textbox" hidden>Comment</label>
+                        <textarea class="form-control" id="comment-textbox" placeholder="Write Comment.." rows="3"></textarea>
+                    </div>
+                    <div class="col-auto">
+                        <label for="comment-submit" hidden>Submit</label>
+                        <button class="btn btn-primary" id="comment-submit" type="submit">Submit</button>
+                    </div>
                 </form>
 
                 <ul>
@@ -53,17 +67,29 @@
                         </div>
                     </li>
                 </ul>
-            </div>
 
-            <nav>
-                <a href="#">Previous</a>
-                <a href="#">Next</a>
+            </section>
+        </div>
+
+        <div class="row g-5">
+            <nav aria-label="Page navigation example">
+                <ul class="pagination">
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Previous">
+                            <span aria-hidden="true">&laquo; prev</span>
+                        </a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Next">
+                            <span aria-hidden="true">next &raquo;</span>
+                        </a>
+                    </li>
+                </ul>
             </nav>
-        </section>
-
+        </div>
     </main>
 
     <footer id="footer"></footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
