#18-Implement controller to forward the root path to forum page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Root Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Eunah Kim">
+    <title>Welcome page</title>
 </head>
 <body>
-Root Page
+Welcome!
+<!--TODO: Root path is redirect to forum, so this page is not being used anymore. Need to be considered to delete it later on-->
 </body>
 </html>
