--- a/src/main/resources/templates/postings/index.html
+++ b/src/main/resources/templates/postings/index.html
@@ -12,7 +12,10 @@
 
 <body>
 
-    <header id="header"></header>
+    <header id="header">
+        Header Insert
+        <hr>
+    </header>
 
     <main class="container">
 
@@ -53,21 +56,21 @@
             </div>
         </div>
 
-        <table class="table">
+        <table class="table" id="posting-table">
             <thead>
                 <tr>
-                    <th class="col-6">Title</th>
-                    <th class="col-2">Hashtage</th>
-                    <th>CreatedBy</th>
-                    <th>CreatedAt</th>
+                    <th class="title col-6">Title</th>
+                    <th class="hashtag col-2">Hashtage</th>
+                    <th class="user-id col">CreatedBy</th>
+                    <th class="created-at col">CreatedAt</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>First posting</td>
-                    <td>#java</td>
-                    <td>Eunah</td>
-                    <td>2024-03-30</td>
+                    <td class="title"><a>First posting</a></td>
+                    <td class="hashtag">Eunah</td>
+                    <td class="user-id">#java</td>
+                    <td class="created-at"><time>2024-03-30</time></td>
                 </tr>
                 <tr>
                     <td>Second posting</td>
@@ -95,7 +98,10 @@
         </nav>
     </main>
 
-    <footer id="footer"></footer>
+    <footer id="footer">
+        <hr>
+        Footer Insert
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
