--- a/src/main/resources/templates/postings/detail.html
+++ b/src/main/resources/templates/postings/detail.html
@@ -10,24 +10,27 @@
 </head>
 
 <body>
-    <header id="header"></header>
+    <header id="header">
+        Header Insert
+        <hr>
+    </header>
 
-    <main class="container">
-        <header class="py-5 text-center">
+    <main id="posting-main" class="container">
+        <header id="posting-header" class="py-5 text-center">
             <h1>First Posting</h1>
         </header>
 
         <div class="row g-5">
             <section class="col-md-5 col-lg-4 order-md-last">
                 <aside>
-                    <p><span class="nick-name">Eunah</span></p>
-                    <p><a class="u-url" rel="me" href="rladmsdkz@gmail.com">rladmsdkz@mail.com</a></p>
-                    <p><time datetime="2024-04-01T00:00:00">2024-01-01</time></p>
-                    <p>#java</p>
+                    <p><span id="nickname" class="nick-name">Eunah</span></p>
+                    <p><a id="email" class="u-url" rel="me" href="rladmsdkz@gmail.com">rladmsdkz@mail.com</a></p>
+                    <p><time id="created-at" datetime="2024-04-01T00:00:00">2024-01-01</time></p>
+                    <p><span id="hashtag">#java</span></p>
                 </aside>
             </section>
 
-            <article class="col-md-7 col-lg-8">
+            <article id="posting-content" class="col-md-7 col-lg-8">
                 <p>Content<br><br></p>
             </article>
         </div>
@@ -45,7 +48,7 @@
                     </div>
                 </form>
 
-                <ul>
+                <ul id="posting-comments" class="row col-7">
                     <li>
                         <div>
                             <time><small>2024-01-01</small></time>
@@ -89,7 +92,10 @@
         </div>
     </main>
 
-    <footer id="footer"></footer>
+    <footer id="footer">
+        <hr>
+        Footer Insert
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
