--- a/src/main/resources/templates/postings/detail.html
+++ b/src/main/resources/templates/postings/detail.html
@@ -31,7 +31,7 @@
             </section>
 
             <article id="posting-content" class="col-md-7 col-lg-8">
-                <p>Content<br><br></p>
+                <pre>Content</pre>
             </article>
         </div>
 
@@ -75,7 +75,7 @@
         </div>
 
         <div class="row g-5">
-            <nav aria-label="Page navigation example">
+            <nav id="pagination" aria-label="Page navigation">
                 <ul class="pagination">
                     <li class="page-item">
                         <a class="page-link" href="#" aria-label="Previous">
