--- a/src/main/resources/templates/postings/index.html
+++ b/src/main/resources/templates/postings/index.html
@@ -8,6 +8,7 @@
     <title>Forum Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="/css/search-bar.css" rel="stylesheet">
+    <link href="/css/postings/table-header.css" rel="stylesheet">
 </head>
 
 <body>
@@ -59,10 +60,10 @@
         <table class="table" id="posting-table">
             <thead>
                 <tr>
-                    <th class="title col-6">Title</th>
-                    <th class="hashtag col-2">Hashtage</th>
-                    <th class="user-id col">CreatedBy</th>
-                    <th class="created-at col">CreatedAt</th>
+                    <th class="title col-6"><a>Title</a></th>
+                    <th class="hashtag col-2"><a>Hashtage</a></th>
+                    <th class="user-id col"><a>CreatedBy</a></th>
+                    <th class="created-at col"><a>CreatedAt</a></th>
                 </tr>
             </thead>
             <tbody>
