#38- Add codes needed in forum, posting view pages
Added the necessary codes and also update bootstrap codes

--- a/src/main/resources/templates/postings/detail.html
+++ b/src/main/resources/templates/postings/detail.html
@@ -21,7 +21,7 @@
         </header>
 
         <div class="row g-5">
-            <section class="col-md-5 col-lg-4 order-md-last">
+            <section class="col-md-3 col-lg-4 order-md-last">
                 <aside>
                     <p><span id="nickname" class="nick-name">Eunah</span></p>
                     <p><a id="email" class="u-url" rel="me" href="rladmsdkz@gmail.com">rladmsdkz@mail.com</a></p>
@@ -30,29 +30,38 @@
                 </aside>
             </section>
 
-            <article id="posting-content" class="col-md-7 col-lg-8">
+            <article id="posting-content" class="col-md-9 col-lg-8">
                 <pre>Content</pre>
             </article>
+        </div>
+
+        <div class="row g-5" id="posting-buttons">
+            <form id="delete-posting-form">
+                <div class="pb-5 d-grid gap-2 d-md-block">
+                    <a class="btn btn-success me-md-2" role="button" id="update-posting">Update</a>
+                    <button class="btn btn-danger me-md-2" type="submit">Delete</button>
+                </div>
+            </form>
         </div>
 
         <div class="row g-5">
             <section>
                 <form class="row g-3">
-                    <div class="col-8">
+                    <div class="col-md-9 col-lg-8">
                         <label for="comment-textbox" hidden>Comment</label>
                         <textarea class="form-control" id="comment-textbox" placeholder="Write Comment.." rows="3"></textarea>
                     </div>
-                    <div class="col-auto">
+                    <div class="col-mid-3 col-lg-4">
                         <label for="comment-submit" hidden>Submit</label>
                         <button class="btn btn-primary" id="comment-submit" type="submit">Submit</button>
                     </div>
                 </form>
 
-                <ul id="posting-comments" class="row col-7">
+                <ul id="posting-comments" class="row col-md-10 col-lg-8 pt-3">
                     <li>
-                        <div>
-                            <time><small>2024-01-01</small></time>
+                        <div class="row">
                             <strong>Eunah</strong>
+                            <time><small>2024-01-01</small></time>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
                                 Lorem ipsum dolor sit amet
@@ -60,9 +69,9 @@
                         </div>
                     </li>
                     <li>
-                        <div>
+                        <div class="row">
+                            <strong>Eunah2</strong>
                             <time><small>2024-01-01</small></time>
-                            <strong>Eunah</strong>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
                                 Lorem ipsum dolor sit amet
