--- a/src/main/resources/templates/postings/index.html
+++ b/src/main/resources/templates/postings/index.html
@@ -23,7 +23,7 @@
         <div class="row">
             <div class="card card-margin search-form">
                 <div class="card-body p-0">
-                    <form action="/postings" method="get">
+                    <form id="search-form">
                         <div class="row">
                             <div class="col-12">
                                 <div class="row no-gutters">
@@ -57,16 +57,17 @@
             </div>
         </div>
 
-        <table class="table" id="posting-table">
-            <thead>
+        <div class="row">
+            <table class="table" id="posting-table">
+                <thead>
                 <tr>
                     <th class="title col-6"><a>Title</a></th>
                     <th class="hashtag col-2"><a>Hashtage</a></th>
-                    <th class="user-id col"><a>CreatedBy</a></th>
-                    <th class="created-at col"><a>CreatedAt</a></th>
+                    <th class="user-id"><a>CreatedBy</a></th>
+                    <th class="created-at"><a>CreatedAt</a></th>
                 </tr>
-            </thead>
-            <tbody>
+                </thead>
+                <tbody>
                 <tr>
                     <td class="title"><a>First posting</a></td>
                     <td class="hashtag">Eunah</td>
@@ -85,16 +86,25 @@
                     <td>Eunah</td>
                     <td>2024-03-30</td>
                 </tr>
-            </tbody>
-        </table>
+                </tbody>
+            </table>
+        </div>
 
-        <nav id="pagination" aria-label="Page navigation">
-            <ul class="pagination justify-content-center">
-                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">Next</a></li>
-            </ul>
-        </nav>
+        <div class="row">
+            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <a class="btn btn-primary me-md-2" role="button" id="write-posting">Write Posting</a>
+            </div>
+        </div>
+
+        <div class="row">
+            <nav id="pagination" aria-label="Page navigation">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                </ul>
+            </nav>
+        </div>
     </main>
 
     <footer id="footer">
