--- a/src/main/resources/templates/postings/detail.html
+++ b/src/main/resources/templates/postings/detail.html
@@ -46,32 +46,41 @@
 
         <div class="row g-5">
             <section>
-                <form class="row g-3">
+                <form class="row g-3" id="comment-form">
+                    <input type="hidden" class="posting-id">
                     <div class="col-md-9 col-lg-8">
                         <label for="comment-textbox" hidden>Comment</label>
-                        <textarea class="form-control" id="comment-textbox" placeholder="Write Comment.." rows="3"></textarea>
+                        <textarea class="form-control" id="comment-textbox" placeholder="Write Comment.." rows="3" required></textarea>
                     </div>
-                    <div class="col-mid-3 col-lg-4">
-                        <label for="comment-submit" hidden>Submit</label>
+                    <div class="col-md-3 col-lg-4">
+                        <label for="comment-submit" hidden>Write Comment</label>
                         <button class="btn btn-primary" id="comment-submit" type="submit">Submit</button>
                     </div>
                 </form>
 
                 <ul id="posting-comments" class="row col-md-10 col-lg-8 pt-3">
                     <li>
-                        <div class="row">
-                            <strong>Eunah</strong>
-                            <time><small>2024-01-01</small></time>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
-                                Lorem ipsum dolor sit amet
-                            </p>
-                        </div>
+                        <form class="comment-form">
+                            <input type="hidden" class="posting-id">
+                            <div class="row">
+                                <div class="col-md-10 col-lg-9">
+                                    <strong>Eunah</strong>
+                                    <small><time>2024-01-01</time></small>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+                                        Lorem ipsum dolor sit amet
+                                    </p>
+                                </div>
+                                <div class="col-2 mb-3">
+                                    <button type="submit" class="btn btn-outline-danger" id="delete-comment-button">Delete</button>
+                                </div>
+                            </div>
+                        </form>
                     </li>
                     <li>
-                        <div class="row">
-                            <strong>Eunah2</strong>
-                            <time><small>2024-01-01</small></time>
+                        <div>
+                            <strong>Eunah</strong>
+                            <small><time>2024-01-01</time></small>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
                                 Lorem ipsum dolor sit amet
