#42-Connect authentication to the views
Posting / comment's submit, update, delete buttons should be appear when it's already authrozied. If not, hide it.
Header also show info based on the authentication info.

--- a/src/main/resources/templates/postings/detail.html
+++ b/src/main/resources/templates/postings/detail.html
@@ -71,20 +71,25 @@
                                         Lorem ipsum dolor sit amet
                                     </p>
                                 </div>
-                                <div class="col-2 mb-3">
+                                <div class="col-2 mb-3 align-self-center">
                                     <button type="submit" class="btn btn-outline-danger" id="delete-comment-button">Delete</button>
                                 </div>
                             </div>
                         </form>
                     </li>
                     <li>
-                        <div>
-                            <strong>Eunah</strong>
-                            <small><time>2024-01-01</time></small>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
-                                Lorem ipsum dolor sit amet
-                            </p>
+                        <div class="row">
+                            <div class="col-md-10 col-lg-9">
+                                <strong>Eunah2</strong>
+                                <small><time>2024-01-01</time></small>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+                                    Lorem ipsum dolor sit amet
+                                </p>
+                            </div>
+                            <div class="col-2 mb-3">
+                                <button type="submit" class="btn btn-outline-danger" hidden>Delete</button>
+                            </div>
                         </div>
                     </li>
                 </ul>
