--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -9,6 +9,10 @@
     <header class="p-3 bg-dark text-white">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <a href="https://github.com/smileLoopy">
+                    <img src="/css/loopySmile.jpg" alt="Logo" class="me-4" style="max-width: 30px;">
+                </a>
+
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><a id="home" href="#" class="nav-link px-2 text-secondary">Home</a></li>
                     <li><a id="hashtag" href="#" class="nav-link px-2 text-secondary">Hashtags</a></li>
