--- a/src/main/resources/templates/postings/detail.html
+++ b/src/main/resources/templates/postings/detail.html
@@ -26,7 +26,7 @@
                     <p><span id="nickname" class="nick-name">Eunah</span></p>
                     <p><a id="email" class="u-url" rel="me" href="rladmsdkz@gmail.com">rladmsdkz@mail.com</a></p>
                     <p><time id="created-at" datetime="2024-04-01T00:00:00">2024-01-01</time></p>
-                    <p><span id="hashtag">#java</span></p>
+                    <p><span id="hashtag" class="badge text-bg-secondary mx-1"><a class="text-reset">#java</a></span></p>
                 </aside>
             </section>
 
