--- a/src/main/resources/templates/postings/index.html
+++ b/src/main/resources/templates/postings/index.html
@@ -70,8 +70,8 @@
                 <tbody>
                 <tr>
                     <td class="title"><a>First posting</a></td>
-                    <td class="hashtag">Eunah</td>
-                    <td class="user-id">#java</td>
+                    <td class="hashtag"><span class="badge text-bg-secondary mx-1"><a class="text-reset">#java</a></span></td>
+                    <td class="user-id">Eunah</td>
                     <td class="created-at"><time>2024-03-30</time></td>
                 </tr>
                 <tr>
