--- a/src/main/resources/templates/postings/detail.html
+++ b/src/main/resources/templates/postings/detail.html
@@ -46,11 +46,11 @@
 
         <div class="row g-5">
             <section>
-                <form class="row g-3" id="comment-form">
+                <form class="row g-3 comment-form">
                     <input type="hidden" class="posting-id">
                     <div class="col-md-9 col-lg-8">
                         <label for="comment-textbox" hidden>Comment</label>
-                        <textarea class="form-control" id="comment-textbox" placeholder="Write Comment.." rows="3" required></textarea>
+                        <textarea class="form-control comment-textbox" id="comment-textbox" placeholder="Write Comment.." rows="3" required></textarea>
                     </div>
                     <div class="col-md-3 col-lg-4">
                         <label for="comment-submit" hidden>Write Comment</label>
@@ -59,37 +59,55 @@
                 </form>
 
                 <ul id="posting-comments" class="row col-md-10 col-lg-8 pt-3">
-                    <li>
-                        <form class="comment-form">
+                    <li class="parent-comment">
+                        <form class="comment-delete-form">
                             <input type="hidden" class="posting-id">
                             <div class="row">
                                 <div class="col-md-10 col-lg-9">
                                     <strong>Eunah</strong>
                                     <small><time>2024-01-01</time></small>
-                                    <p>
+                                    <p class="mb-1">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
                                         Lorem ipsum dolor sit amet
                                     </p>
                                 </div>
                                 <div class="col-2 mb-3 align-self-center">
-                                    <button type="submit" class="btn btn-outline-danger" id="delete-comment-button">Delete</button>
+                                    <button type="submit" class="btn btn-outline-danger">Delete</button>
                                 </div>
                             </div>
                         </form>
-                    </li>
-                    <li>
+
+                        <ul class="row me-0">
+                            <li class="child-comment">
+                                <form class="comment-delete-form">
+                                    <input type="hidden" class="posting-id">
+                                    <div class="row">
+                                        <div class="col-md-10 col-lg-9">
+                                            <strong>Eunah</strong>
+                                            <small><time>2022-01-01</time></small>
+                                            <p class="mb-1">
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+                                                Lorem ipsum dolor sit amet
+                                            </p>
+                                        </div>
+                                        <div class="col-2 mb-3 align-self-center">
+                                            <button type="submit" class="btn btn-outline-danger">Delete</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </li>
+                        </ul>
+
                         <div class="row">
-                            <div class="col-md-10 col-lg-9">
-                                <strong>Eunah2</strong>
-                                <small><time>2024-01-01</time></small>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
-                                    Lorem ipsum dolor sit amet
-                                </p>
-                            </div>
-                            <div class="col-2 mb-3">
-                                <button type="submit" class="btn btn-outline-danger" hidden>Delete</button>
-                            </div>
+                            <details class="col-md-10 col-lg-9 mb-4">
+                                <summary>Write Comment</summary>
+                                <form class="comment-form">
+                                    <input type="hidden" class="posting-id">
+                                    <input type="hidden" class="parent-comment-id">
+                                    <textarea class="form-control comment-textbox" placeholder="Write Comment.." rows="2" required></textarea>
+                                    <button class="form-control btn btn-primary mt-2" type="submit">Submit</button>
+                                </form>
+                            </details>
                         </div>
                     </li>
                 </ul>
